--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,20 +14,38 @@
         <url-pattern>/logs</url-pattern>
     </servlet-mapping>
     
-    
-<!--    <servlet>
-        <servlet-name>logs</servlet-name>
-        <servlet-class>com.servlet.logs</servlet-class>
+    <servlet>
+        <servlet-name>signout</servlet-name>
+        <servlet-class>com.servlet.logout</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>logs</servlet-name>
-        <url-pattern>/logs</url-pattern>
-    </servlet-mapping>-->
+        <servlet-name>signout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    
+    
+  <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>com.servlet.login</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>signup</servlet-name>
+        <servlet-class>com.servlet.signup</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>signup</servlet-name>
+        <url-pattern>/signup</url-pattern>
+    </servlet-mapping>
     
     
     <session-config>
         <session-timeout>
-            30
+           5
         </session-timeout>
     </session-config>
 </web-app>
